--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@amcharts/amcharts5": "^5.14.4",
     "mssql": "^12.1.0",
     "next": "16.0.1",
     "react": "19.2.0",
