--- a/backend2/backend2.csproj
+++ b/backend2/backend2.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Model\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
